# Hackathon-0-Personal-AI-Employee

./: .gitignore  GIT_PUSH_SUCCESS.md  LICENSE  QUICK_START_GOLD_TIER.md  README_TIERS.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_SUMMARY.md  fix_import_paths.py  pyproject.toml  reorganize_tiers.py  verify_reorganization.py
Bronze-Tier/: .env.example  BRONZE_VS_SILVER.md  Company_Handbook.md  GITHUB_PUSH_GUIDE.md  GOLD_TIER_EMAIL_SENDER_COMPLETE.md  INSTALL_AND_TEST.md  LINKEDIN_SETUP_MANUAL.md  QUICK_REFERENCE.md  README.md  README_LOCAL.md  README_TIER.md  SILVER_TIER_COMPLETE.md  SILVER_TIER_FINAL_SETUP.md  SILVER_TIER_MULTI_SOURCE_GUIDE.md  SILVER_TIER_README.md  SILVER_TIER_SETUP.md  START_HERE.md  TEST_EMAIL_SENDER.md  TROUBLESHOOTING.md  VERIFY_SILVER_TIER.md  WHATSAPP_TROUBLESHOOTING.md  WHATSAPP_UNREAD_MANUAL_CHECK.md  debug_gmail.py  debug_unread_detection.py  debug_whatsapp_live.py  debug_whatsapp_selectors.py  demo_guide.md  fix_whatsapp_detection.py  run_both_watchers.py  setup_linkedin.py  test_gmail_query.py  test_whatsapp_simple.py  test_whatsapp_unread.py
Gold-Tier/: CLAUDE.md  DO_THIS_NOW.md  Dashboard.md  EMAIL_TO_ODOO_WORKFLOW.md  FACEBOOK_INTEGRATION.md  GOLD_TIER_AUTO_EMAIL_WORKFLOW.md  GOLD_TIER_POLISH_COMPLETE.md  ODOO_INTEGRATION_COMPLETE.md  ODOO_INTEGRATION_STATUS.md  ODOO_PAYMENT_RECONCILIATION.md  ODOO_SETUP_INSTRUCTIONS.md  PHASE_2.5_COMPLETE.md  PHASE_2_READY.md  PHASE_2_SUMMARY.md  PHASE_3_FACEBOOK_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_QUALITY_ASSESSMENT.md  PHASE_4_QUICK_START.md  PHASE_5_COMPLETE.md  README.md  push_to_github.sh  (+5 more)
(+597 files in other folders)
